--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+//	MariaDB오류 해결을 위해. . .
+	implementation group: 'org.javassist', name: 'javassist', version: '3.15.0-GA'
+
 //	JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -36,6 +39,8 @@ dependencies {
 
 //	mariaDB
 	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '3.1.2'
+//	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.0'
+
 
 // 	json
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
