랜드마크 localDate변수 2개 추가, 랜드마크baseEntity상속 Landmark부분 오버라이드, imgpath시도

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.datasource.password=sys123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+
+#file path
+filepath=C:\\uploadfile\\
+webpath=file:/C:\\uploadfile\\
+
+#filepath: ???? ?? ???? ????????
+#webpath: ??? ?? ??? ???? ??
