--- a/build.gradle
+++ b/build.gradle
@@ -51,12 +51,11 @@ dependencies {
 	testAnnotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.projectlombok:lombok'
 
-//	타임리프
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-
-
 //	Spring Boot의 테스트 라이브러리
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+//	이메일 보내기 위한 의존성 추가
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('test') {
