--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,11 @@ spring.jpa.show-sql=true
 filepath=C:\\uploadfile\\
 webpath=file:/C:\\uploadfile\\
 
+#?????
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username= kimyslive7@gmail.com
+spring.mail.password= chpq xjbe sgya shtu
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
