생년월일,폰,닉네임,아이디 서비스임플 추가

--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,10 @@ dependencies {
 
 //	이메일 보내기 위한 의존성 추가
 //	implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+	// 테스트
+	annotationProcessor 'org.projectlombok:lombok'
+
 }
 
 tasks.named('test') {
