--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,5 @@ webpath=file:/C:\\uploadfile\\
 #spring.mail.username= 
 #spring.mail.password=
 #spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.enable=truew
 
