--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,7 @@ webpath=file:/C:\\uploadfile\\
 #spring.mail.properties.mail.smtp.auth=true
 #spring.mail.properties.mail.smtp.starttls.enable=truew
 
+#s3
+s3.access-key=
+s3.secret-key=
+s3.region=
